# deepstart

./: README.md  db.sqlite3  deploy.ps1  main.py  pyproject.toml  requirements.txt
app_deepstart/: apps.py
app_deepstart/management/commands/: agent001.py  exemplos.py  extrair_pdf.py  extrair_pdf_limpar_regex.py  nlp_test.py
app_openmanus/: llm.py  logger.py  urls.py
app_openmanus/agent/: __init__.py  base.py  browser.py  data_analysis.py  manus.py  mcp.py  react.py  swe.py  toolcall.py
app_openmanus/flow/: base.py  flow_factory.py  planning.py
app_openmanus/mcp/: server.py
app_openmanus/sandbox/: __init__.py  client.py
app_openmanus/sandbox/core/: manager.py  sandbox.py
app_openmanus/tool/: __init__.py  ask_human.py  bash.py  browser_use_tool.py  create_chat_completion.py  file_operators.py  mcp.py  planning.py  python_execute.py  str_replace_editor.py  terminate.py  tool_collection.py  web_search.py
app_openmanus/tool/chart_visualization/: __init__.py  chart_prepare.py  data_visualization.py  python_execute.py
app_openmanus/tool/chart_visualization/test/: chart_demo.py  report_demo.py
app_openmanus/tool/search/: __init__.py  baidu_search.py  bing_search.py  duckduckgo_search.py  google_search.py
docs/: Seped_250410.csv  Seped_250410.xls  portas.bat
setup/: settings.py  urls.py
