[project]
name = "deepstart"
version = "0.1.0"
description = "DeepStar é um projeto da SianpTech voltado ao desenvolvimento de soluções avançadas em inteligência artificial e machine learning, com foco em automação inteligente, análise preditiva e inovação orientada por dados."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
]
