[project]
name = "deepstart"
version = "0.1.0"
description = "DeepStar é um projeto da SianpTech voltado ao desenvolvimento de soluções avançadas em inteligência artificial e machine learning, com foco em automação inteligente, análise preditiva e inovação orientada por dados."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url==2.3.0",
    "django>=5.2",
    "django-timezone-field==7.1",
    "djangorestframework>=3.16.0",
    "psycopg==3.2.3",
]
